[package]
name = "rs-pwsafe"
version = "0.0.3"
edition = "2021"
description = "A readonly implementation of the pwsafe file format"
readme = "README.MD"
keywords = ["pwsafe", "password-safe"]
repository = "https://github.com/Komplementariteten/rs-pwsafe"
license-file = "LICENSE"
documentation = "https://docs.rs/rs-pwsafe/0.0.3/rs_pwsafe/"

[dependencies]
lsx = "1.1"
sha2 = "0.10.6"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]